# vault-plugin-auth-google-acc

./: .env  .gitignore  Makefile  backend.go  docker-compose.yml  go.mod  go.sum  google_auth.go  main.go  path_code_url.go  path_config.go  path_login.go  path_roles.go  utils.go
cmd/vault-plugin-auth-google-acc/: main.go
google/: backend.go  path_code_url.go  path_config.go  path_login.go  path_roles.go  utils.go
plugin/: .env  .gitignore  Dockerfile  Makefile  backend.go  google_oauth.go  path_code_url.go  path_config.go  path_login.go  path_roles.go  utils.go
plugin/.docker/: .gitignore  Dockerfile
plugin/.docker/config/: server.hcl
plugin/cmd/vault-plugin-auth-google-acc/: main.go
scripts/: util.py  vault_init.py  vault_plugin_install.py
webflow/: .gitignore  README.md
webflow/.docker/: Dockerfile
webflow/.docs/: policy.md
webflow/application/: .pylintrc  pyproject.toml
webflow/application/webflow/: __main__.py  router.py
webflow/application/webflow/resource/_shared/: exception.py
webflow/application/webflow/resource/_shared/controller/: __init__.py  error.py
webflow/application/webflow/resource/_shared/service/: __init__.py  vault.py
webflow/application/webflow/resource/gauth/: controller.py
webflow/application/webflow/resource/login/: controller.py
webflow/application/webflow/resource/roles/: controller.py
webflow/application/webflow/static/js/: clipboard.js  request.js  utils.js
webflow/application/webflow/static/templates/: base.html  error.html  roles.html  token.html
