[tool.poetry]
name        = "vault-auth-google-webflow-service"
version     = "0.1.0"
description = ""
authors     = ["Caian Ertl <hi@caian.org>"]
license     = "CC0-1.0"

[tool.poetry.dependencies]
python        = "^3.10"
Flask         = "2.1.2"
Flask-RESTful = "0.3.9"
hvac          = "0.11.2"

[tool.poetry.dev-dependencies]
bandit       = "1.7.4"
black        = "22.3.0"
jedi         = "0.18.1"
poethepoet   = "0.14.0"
pylint       = "2.14.3"
pytest       = "7.1.2"
pytest-cov   = "3.0.0"
pytest-sugar = "0.9.4"
vulture      = "2.4"
watchdog     = "2.1.9"

[tool.poe.tasks]
"start"          = "python -m webflow"
"start:watch"    = "watchmedo auto-restart -p '*.py' -R poetry run poe start"
"check:deadcode" = "vulture webflow"
"check:lint"     = "pylint --fail-under 9 --rcfile .pylintrc --output-format colorized --verbose webflow"
"check:security" = "bandit -r webflow"
"check:style"    = "black -t py39 -l 120 -S --check webflow"
"fix:imports"    = "isort --sl webflow/**/*.py"
"fix:style"      = "black -t py39 -l 120 -S webflow"

[tool.isort]
filter_files = true

[build-system]
requires      = ["poetry-core> = 1.0.0"]
build-backend = "poetry.core.masonry.api"
